SVY-9274 Class -unresolved- for new responsive container or column Use styleclasses-list from spec for non-legacy webcomponents, also when no css is defined at solution level. also fixes for showing default value and deactive editor on enter-key